<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_drinks_variable_selection"
    tools:context="com.diagraphictech.drinkscalculator.DrinksVariableSelection">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        android:gravity="center"
        android:background="#D24136"
        android:text="@string/genderTitle" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_gender"
        android:checkedButton="@+id/gender_male"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#D24136"
        android:gravity="center">
        <RadioButton android:id="@id/gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:text="@string/male"/>
        <RadioButton android:id="@+id/gender_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:text="@string/female"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#EB8A3E"
        android:typeface="sans"
        android:gravity="center"
        android:text="@string/weightTitle" />

    <EditText android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EB8A3E"
        android:textColor="#FFFFFF"
        android:hint="@string/weightHint"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#EBB582"
        android:typeface="sans"
        android:gravity="center"
        android:text="@string/ageTitle" />

    <EditText android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#EBB582"
        android:textColor="#FFFFFF"
        android:hint="@string/ageHint"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#50624D"
        android:typeface="sans"
        android:gravity="center"
        android:text="@string/foodTitle" />

    <EditText android:id="@+id/food"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#50624D"
        android:textColor="#FFFFFF"
        android:hint="@string/foodHint"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#785A46"
        android:typeface="sans"
        android:gravity="center"
        android:text="@string/drinkTitle" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_drink"
        android:checkedButton="@+id/beer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#785A46"
        android:gravity="center">
        <RadioButton
            android:id="@id/beer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="@string/beer"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="@string/wine" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:text="@string/vodka"/>
    </RadioGroup>

    <Button
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:onClick="calculateDrinks"/>

</LinearLayout>
