<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.diagraphictech.drinkscalculator.DrinksCalculation"
    tools:showIn="@layout/activity_drinks_calculation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#8E7970"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="#FCFCFA"
            android:gravity="center"
            android:text="@string/sober"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#FCFCFA"
            android:id="@+id/soberval"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FAAE3D"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#FCFCFA"
            android:text="@string/tipsy"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#FCFCFA"
            android:id="@+id/tipsyval"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F55449"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#FCFCFA"
            android:text="@string/drunk"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#FCFCFA"
            android:id="@+id/drunkval"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#1B4B5A"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="#FCFCFA"
            android:gravity="center"
            android:text="@string/wasted"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="#FCFCFA"
            android:gravity="center"
            android:id="@+id/wastedval"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0F1F38"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="#FCFCFA"
            android:text="@string/blackout"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="#FCFCFA"
            android:gravity="center"
            android:id="@+id/blackoutval"/>
    </LinearLayout>
</LinearLayout>
